--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,21 +9,22 @@ jobs:
              name: install dependencies
              command: |
                 npm install --save
-#  build_docker_image:
-    docker:
-      - image: circleci/node:20
-    steps:
-      - checkout
-      - setup_remote_docker:
-          docker_layer_caching: false
-      - run:
-          name: Build Docker image
-          command: |
-             docker build -t nodejsapp1 -t happy361/nodejsapp1:latest .
-             echo $Docker_PASSWORD | docker login -u happy361 --password-stdin
-             docker push happy361/nodejsapp1:latest
+
+  # build_docker_image:
+  #   docker:
+  #     - image: circleci/node:20
+  #   steps:
+  #     - checkout
+  #     - setup_remote_docker:
+  #         docker_layer_caching: false
+  #     - run:
+  #         name: Build Docker image
+  #         command: |
+  #            docker build -t nodejsapp1 -t happy361/nodejsapp1:latest .
+  #            echo $Docker_PASSWORD | docker login -u happy361 --password-stdin
+  #            docker push happy361/nodejsapp1:latest
 workflows:
    build_test:
       jobs:
         - build_test
-        - build_docker_image                                
+#        - build_docker_image                                
