--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2.1
 jobs:
   build_test:
       docker:
-        - image: node:20
+        - image: circleci/node:12
       steps:
         - checkout
         - run:
@@ -12,7 +12,7 @@ jobs:
 
   build_docker_image:
     docker:
-      - image: node:20
+      - image: node:circleci/node:12
     steps:
       - checkout
       - setup_remote_docker:
