--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,9 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-             docker build -t nodeapp1 -t happy361/nodeapp1:latest .
-             echo $DOCKER_PASSWORD | docker login -u $DOCKER_USERNAME --password-stdin
-             docker push happy361/nodeapp1:latest
+             docker build -t nodeapp20 -t happy361/nodeapp20:latest .
+             echo Lenovo361gb | docker login -u happy361 --password-stdin
+             docker push happy361/nodeapp20:latest
 workflows:
    build_test:
       jobs:
