--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,9 +20,9 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-             docker build -t nodeapp20 -t happy361/nodeapp20:latest .
+             docker build -t nodeapp20 -t happy361/nodeapp20:${CIRCLE_TAG} .
              echo Lenovo361gb | docker login -u happy361 --password-stdin
-             docker push happy361/nodeapp20:latest
+             docker push happy361/nodeapp20:${CIRCLE_TAG}
 workflows:
    build_test:
       jobs:
