--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,14 +1,14 @@
 version: 2.1
 jobs:
   build_test:
-      docker:
-        - image: cimg/node:20.12.0
-      steps:
-        - checkout
-        - run:
-             name: install dependencies
-             command: |
-                npm install --save
+    docker:
+      - image: cimg/node:20.12.0
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            npm install --save
 
   build_docker_image:
     docker:
@@ -20,13 +20,18 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-             docker build -t nodeapp20 -t happy361/nodeapp20:${CIRCLE_TAG} .
-             echo Lenovo361gb | docker login -u happy361 --password-stdin
-             docker push happy361/nodeapp20:${CIRCLE_TAG}
+            docker build -t nodeapp20 -t happy361/nodeapp20:${CIRCLE_TAG} .
+            echo Lenovo361gb | docker login -u happy361 --password-stdin
+            docker push happy361/nodeapp20:${CIRCLE_TAG}
+
 workflows:
-   build_test:
-      jobs:
-        - build_test
-        - build_docker_image:
-                  requires:
-                      - build_test
+  version: 2
+  build-and-deploy:
+    jobs:
+      - build_test
+      - build_docker_image:
+          requires:
+            - build_test
+          filters:
+            tags:
+              only: /^v\d+\.\d+\.\d+$/  # Regex pattern to match version tags
