--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,9 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-            docker build -t nodeapp20 -t happy361/nodeapp20:${CIRCLE_TAG} .
+            docker build -t nodeapp20 -t happy361/nodeapp20:${CIRCLE_SHA1} .
             echo Lenovo361gb | docker login -u happy361 --password-stdin
-            docker push happy361/nodeapp20:${CIRCLE_TAG}
+            docker push happy361/nodeapp20:${CIRCLE_SHA1}
 
 workflows:
   version: 2
