--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,9 @@ jobs:
       - run:
           name: Build Docker image
           command: |
-            docker build -t nodeapp20 -t happy361/nodeapp20:${CIRCLE_SHA1} .
+            docker build -t nodeapp20 -t happy361/nodeapp20:${CIRCLE_TAG} .
             echo Lenovo361gb | docker login -u happy361 --password-stdin
-            docker push happy361/nodeapp20:${CIRCLE_SHA1}
+            docker push happy361/nodeapp20:${CIRCLE_TAG}
 workflows:
   version: 2
   build-and-deploy:
@@ -34,4 +34,6 @@ workflows:
             - build_test
           filters:
             tags:
-              only: /^v.*/
+              only: /.*/
+            branches:
+              ignore: /.*/
