--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ workflows:
       - build_docker_image:
           requires:
             - build_test
-          filters:
-            tags:
-              only: /^v.*/
+#          filters:
+#            tags:
+#              only: /.*/
+              
